--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ layout: default
       <hr class="post-list__divider" />
     </li>
     {% endfor %}
-  </ol> -->
+  </ol>
 
   {% include pagination.html %}
 
-</div>
+</div> -->
